# external-solvers

./: CMakeLists.txt  README.md
solvers/: CMakeLists.txt  README.md
solvers/mkl_pardiso/: CMakeLists.txt  README.md  mkl_pardiso_solver.cpp
